package sys.stamp;
import "sys/Common.proto";

option java_package = "nirvana.hall.protocol.sys.stamp";

option java_outer_classname = "SaveFingerDataProto";

//指纹采集保存请求
message SaveFingerDataRequest {
    extend BaseRequest {
        optional SaveFingerDataRequest cmd = 308;
    }
    optional string personId = 1;   //指纹编号
    optional string fingerData = 2; //指纹数据
    optional int32 gatherMode = 3;  //采集方式

}

message SaveFingerDataResponse {
    extend BaseResponse {
        optional SaveFingerDataResponse cmd = 308;
    }
    optional string saveStatus = 1;

}